# claude-mcp-server

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
agent-bridge/: bridge.mjs
src/: App.test.ts  App.tsx  log-utils.ts  styles.css  tauri.ts  ui-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_bridge.rs  agent_runtime.rs  claude.rs  commands.rs  config.rs  jobs.rs  lib.rs  logs.rs  main.rs  mcp.rs  server.rs  sessions.rs  state.rs  token_usage.rs  tray.rs
