[package]
name = "cclaude-mcp"
version = "0.1.2"
description = "Cute desktop Claude Code MCP server without Claude Code CLI"
authors = ["Zoe"]
edition = "2021"

[lib]
name = "cclaude_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"
